Remove redundant archives

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 wp_data/
 db_data/
 .DS_Store
+new-themeWORKING.zip
+new-themeWORKING/new-themeWORKING/composer.phar
+new-themeWORKING/new-themeWORKING/images.zip
